# aculs_iced

./: Cargo.toml  LICENSE
frostbyte_term/src/ui/: mod.rs
frozen_term/: Cargo.toml  test.txt
frozen_term/src/: lib.rs  main.rs  terminal.rs
frozen_term/src/components/: ansi_grid.rs  mod.rs  terminal.rs  text_grid.rs
frozen_term/src/ui/: mod.rs
frozen_term/src/widgets/: mod.rs  text_grid.rs
