[package]
name = "frozen_term"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A terminal emulator to embed into your iced application - includes demo app"

[dependencies]
iced = { version = "0.13.1", features = [
    "advanced",
    "canvas",
    "tokio",
    "wgpu",
    "lazy",
] }
portable-pty = "0.9.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
wezterm-term = { git = "https://github.com/wez/wezterm.git" }
